<resources>
    <string name="app_name">Alphabet Book</string>

    <string name="Aa">Aa</string>
    <string name="Bb">Bb</string>
    <string name="Cc">Cc</string>
    <string name="Dd">Dd</string>
    <string name="Ee">Ee</string>
    <string name="Ff">Ff</string>
    <string name="Gg">Gg</string>
    <string name="Hh">Hh</string>
    <string name="Ii">Ii</string>
    <string name="Jj">Jj</string>
    <string name="Kk">Kk</string>
    <string name="Ll">Ll</string>
    <string name="Mm">Mm</string>
    <string name="Nn">Nn</string>
    <string name="Oo">Oo</string>
    <string name="Pp">Pp</string>
    <string name="Qq">Qq</string>
    <string name="Rr">Rr</string>
    <string name="Ss">Ss</string>
    <string name="Tt">Tt</string>
    <string name="Uu">Uu</string>
    <string name="Vv">Vv</string>
    <string name="Ww">Ww</string>
    <string name="Xx">Xx</string>
    <string name="Yy">Yy</string>
    <string name="Zz">Zz</string>
    <string name="buttonFirstPage">First page</string>
    <string name="buttonLastPage">Last Page</string>
    <string name="buttonPrev">Prev</string>
    <string name="buttonNext">Next</string>
    <string name="buttonOverview">Overview Page</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="select_voice">Select voice</string>
    <string name="select_image">Select an image</string>
    <string name="select">Select</string>

    <string-array name="voices">
        <item>Voice A</item>
        <item>Voice B</item>
        <item>Voice C</item>
        <item>Voice D</item>
    </string-array>

    <string-array name="alphabets">
        <item>Aa</item>
        <item>Bb</item>
        <item>Cc</item>
        <item>Dd</item>
        <item>Ee</item>
        <item>Ff</item>
        <item>Gg</item>
        <item>Hh</item>
        <item>Ii</item>
        <item>Jj</item>
        <item>Kk</item>
        <item>Ll</item>
        <item>Mm</item>
        <item>Nn</item>
        <item>Oo</item>
        <item>Pp</item>
        <item>Qq</item>
        <item>Rr</item>
        <item>Ss</item>
        <item>Tt</item>
        <item>Uu</item>
        <item>Vv</item>
        <item>Ww</item>
        <item>Xx</item>
        <item>Yy</item>
        <item>Zz</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speak">speak</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="image_setting">Image Setting</string>
    <string name="pronunciation_settings">Pronunciation Settings</string>
    <string name="select_language">Select language</string>
    <string name="select_speed">Select speed</string>
    <string name="select_photo">select photo</string>
    <string name="choose_language">choose language</string>
    <string name="choose_voice">choose voice</string>
    <string name="choose_speed">choose speed</string>
    <string name="save">Save</string>
</resources>