<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_setting"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/myGray" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/toPickerButton"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:background="@color/background"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/select_photo"
            app:srcCompat="@drawable/add_photo_icon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/pronunciation_settings"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/myGray" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:contentDescription="@string/choose_language"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_voice"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/voiceSpinner"
            android:contentDescription="@string/choose_voice"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_speed"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/speedSpinner"
            android:contentDescription="@string/choose_speed"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>